--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.25.4",
+    "@tailwindcss/typography": "^0.5.16",
+    "axios": "^1.11.0",
+    "next": "15.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.3"
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@types/node": "24.2.0",
+    "@types/react": "19.1.9",
+    "daisyui": "^5.0.46",
+    "tailwindcss": "^4",
+    "typescript": "5.9.2"
   }
 }
